Fixed horizontal scroll but still some styling issues

--- a/src/components/LandingPageAboutIntro/LandingPageAboutIntro.scss
+++ b/src/components/LandingPageAboutIntro/LandingPageAboutIntro.scss
@@ -11,21 +11,18 @@
       font-family: $font-header;
       font-size: 40px;
       font-weight: 500;
-      padding: 211px 222px 0px 430px;
+      padding-top: 222px;
+      padding-left: 430px;
     }
 
     &--paragraph {
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      width: 524px;
-      height: 180px;
-      left: 430px;
-      top: 305px;
       font-family: $font-general;
       font-size: 20px;
       line-height: 180%;
       color: $colour-font-paragraph;
+      margin-top: 2rem;
+      padding-left: 430px;
+      padding-right: 1rem;
     }
 
     &--greenbox {
@@ -33,7 +30,7 @@
       flex-direction: column;
       background-color: rgba(55, 175, 162, 0.06);
       margin-left: 20%;
-      width: 1126px;
+      max-width: 1126px;
       height: 734px;
       position: relative;
       margin-bottom: 5rem;
@@ -67,7 +64,7 @@
       flex-direction: column;
       position: absolute;
       left: 430px;
-      top: 529px;
+      margin-top: 2rem;
       text-decoration: none;
     }
   }
